bugfix - stopped 'jumping' with animation

--- a/src/main.scss
+++ b/src/main.scss
@@ -608,9 +608,9 @@ footer a {
     color: $primary-color;
   }
   .card-image {
-    -webkit-transform: scale(1.05,1.05);
-    -moz-transform: scale(1.05,1.05);
-    transform: scale(1.05,1.05);
+    -webkit-transform: scale3d(1.05,1.05,1);
+    -moz-transform: scale3d(1.05,1.05,1);
+    transform: scale3d(1.05,1.05,1);
   }
 }
 .card-image-link .card-image:after {
@@ -618,15 +618,15 @@ footer a {
   display: block;
   width: 100%;
   height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
-  position: absolute;
   background-image: linear-gradient(100deg, $secondary-color, transparent, $primary-color);
-  z-index: 2;
   opacity: 0.3333;
-  -moz-transition: 0.5s ease;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
+  z-index: 2;
+  -webkit-transition: $transition-speed ease-in-out;
+  -moz-transition: $transition-speed ease-in-out;
+  transition: $transition-speed ease-in-out;
 }
 .card-image-link:hover .card-image:after {
   opacity: 0;
